--- a/ansible/roles/influxdb/tasks/main.yml
+++ b/ansible/roles/influxdb/tasks/main.yml
@@ -3,7 +3,7 @@
   #hostname: name={{ ansible_hostname }}
 
 - name: Import InfluxDB GPG signing key
-  apt_key: url=https://repos.influxdata.com/influxdb.key state=present
+  apt_key: url=https://repos.influxdata.com/influxdata-archive_compat.key state=present
 
 - name: Add InfluxDB repository
   apt_repository: repo='deb https://repos.influxdata.com/ubuntu trusty stable' state=present
