--- a/ansible/roles/aws-cloud-storage/tasks/delete-folder.yml
+++ b/ansible/roles/aws-cloud-storage/tasks/delete-folder.yml
@@ -1,6 +1,7 @@
 ---
 - name: delete files and folders recursively
   environment:
+    AWS_ENDPOINT_URL: "{{ cloud_storage_url }}"
     AWS_DEFAULT_REGION: "{{ aws_default_region }}"
     AWS_ACCESS_KEY_ID: "{{ aws_access_key_id }}"
     AWS_SECRET_ACCESS_KEY: "{{ aws_secret_access_key }}"
