--- a/ansible/roles/zookeeper-upgrade/defaults/main.yml
+++ b/ansible/roles/zookeeper-upgrade/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 zookeeper_version: 3.6.3
-zookeeper_url: "https://downloads.apache.org/zookeeper/stable/apache-zookeeper-{{ zookeeper_version }}-bin.tar.gz"
+zookeeper_url: "https://archive.apache.org/dist/zookeeper/zookeeper-{{ zookeeper_version }}/apache-zookeeper-{{ zookeeper_version }}-bin.tar.gz"
 zookeeper_port: 2181
 zk_jvm_opts: "-Xms128m -Xmx128m"
 verify: True
