--- a/kubernetes/helm_charts/bootstrap/reloader/templates/rolebinding.yaml
+++ b/kubernetes/helm_charts/bootstrap/reloader/templates/rolebinding.yaml
@@ -1,8 +1,14 @@
 {{- if and (not (.Values.reloader.watchGlobally)) (.Values.reloader.rbac.enabled) }}
+{{- if  (.Capabilities.APIVersions.Has "rbac.authorization.k8s.io/v1") }}
+apiVersion: rbac.authorization.k8s.io/v1
+{{ else }}
 apiVersion: rbac.authorization.k8s.io/v1beta1
+{{- end }}
 kind: RoleBinding
 metadata:
-  labels: 
+  annotations:
+{{ include "reloader-helm3.annotations" . | indent 4 }}
+  labels:
 {{ include "reloader-labels.chart" . | indent 4 }}
 {{- if .Values.reloader.rbac.labels }}
 {{ toYaml .Values.reloader.rbac.labels | indent 4 }}
