:update: releader chart updated

--- a/kubernetes/helm_charts/bootstrap/reloader/Chart.yaml
+++ b/kubernetes/helm_charts/bootstrap/reloader/Chart.yaml
@@ -1,27 +1,31 @@
+# Generated from deployments/kubernetes/templates/chart/Chart.yaml.tmpl
+
 apiVersion: v1
-appVersion: v0.0.49
-description: Reloader chart that runs on kubernetes
-home: https://github.com/stakater/Reloader
-icon: https://raw.githubusercontent.com/stakater/Reloader/master/assets/web/reloader-round-100px.png
-keywords:
-- Reloader
-- kubernetes
-maintainers:
-- email: hello@stakater.com
-  name: Stakater
-- email: rasheed@aurorasolutions.io
-  name: rasheedamir
-- email: waseemhassan@stakater.com
-  name: waseem-h
-- email: faizan.ahmad55@outlook.com
-  name: faizanahmad055
-- email: ali.kahoot@aurorasolutions.io
-  name: kahootali
-- email: ahmad@aurorasolutions.io
-  name: ahmadiq
-- email: ahsanmuhammad1@outlook.com
-  name: ahsan-storm
 name: reloader
+description: Reloader chart that runs on kubernetes
+version: v0.0.103
+appVersion: v0.0.103
+keywords:
+  - Reloader
+  - kubernetes
+home: https://github.com/stakater/Reloader
 sources:
-- https://github.com/stakater/IngressMonitorController
-version: v0.0.49
+  - https://github.com/stakater/Reloader
+icon: https://raw.githubusercontent.com/stakater/Reloader/master/assets/web/reloader-round-100px.png
+maintainers:
+  - name: Stakater
+    email: hello@stakater.com
+  - name: rasheedamir
+    email: rasheed@aurorasolutions.io
+  - name: waseem-h
+    email: waseemhassan@stakater.com
+  - name: faizanahmad055
+    email: faizan.ahmad55@outlook.com
+  - name: kahootali
+    email: ali.kahoot@aurorasolutions.io
+  - name: ahmadiq
+    email: ahmad@aurorasolutions.io
+  - name: ahsan-storm
+    email: ahsanmuhammad1@outlook.com
+  - name: ahmedwaleedmalik
+    email: waleed@stakater.com
